5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/1407/executions/1684_1079.log
== SUBMITION (2019-05-02 15:54:44) 
-- CODE:
print(Barry Allen)
-- EXECUTION TIME:
0.18861
-- ERROR:
  File "/home/codebench/codes/1684/1079/main.py", line 1
    print(Barry Allen)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:55:11) 
-- CODE:
print(BarryAllen)
-- EXECUTION TIME:
0.220892
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1079/main.py", line 1, in <module>
    print(BarryAllen)
NameError: name 'BarryAllen' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:55:17) 
-- CODE:
print(BarryAllen
-- EXECUTION TIME:
0.220408
-- ERROR:
  File "/home/codebench/codes/1684/1079/main.py", line 2
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:55:27) 
-- CODE:
print(BarryAllen)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(BarryAllen)
NameError: name 'BarryAllen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
